changed file paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
 
@@ -53,7 +53,7 @@
         <button type="button">Download</button>
       </div>
       <div class = "col-lg-6">
-        <img src="images/iphone6.png" alt="iphone-mockup">
+        <img src="iphone6.png" alt="iphone-mockup">
       </div>
     </div>
 
@@ -94,10 +94,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img src="techcrunch.png" alt="tc-logo">
+    <img src="tnw.png" alt="tnw-logo">
+    <img src="bizinsider.png" alt="biz-insider-logo">
+    <img src="mashable.png" alt="mashable-logo">
 
   </section>
 
